syntax = "proto3";

service CLI {

    //    These methods are used to add & delete slaves on server.
    rpc AddSlave (Slave) returns (Status);
    rpc DeleteSlave (Slave) returns (Status);
    rpc ListSlaves (Empty) returns (stream Slave);
    rpc DeleteSlaves (Empty) returns (Status);

    //    These method is used to Transfer files.
    rpc TransferConfigFile (stream Chunk) returns (Status);
    rpc ReadConfigFile (Empty) returns (stream Chunk);              // TODO

//    These method is used to start the listening process.
    rpc StartListeningServers (Empty) returns (Status);             // Done (Test Remaining)
    rpc StopListeningServers (Empty) returns (Status);              // TODO
    rpc StopListening (Slave) returns (Status);                     // TODO
    rpc GetListenedOutput (Slave) returns (Status);                 // TODO

//

}


message Slave {
    string username = 1;
    string host = 2;
    string password = 3;
}

message Status {
    bool status = 1;
}

message Chunk {
    bytes data = 1;
}

message Empty {
}

message Message {
    string text = 1;
}

